linotp (3.3~0dev-1) buster-dev; urgency=low

  Features:
  * the manage ui login will no longer use refresh and reloads
  * method to provide context information for manage ui
  * new API endpoints to retrieve tokens:
    * /api/v2/tokens
    * /api/v2/tokens/<serial>
  * new API endpoint to retrieve realms:
    * /api/v2/realms
  * new API endpoint to retrieve resolvers:
    * /api/v2/resolvers
  * support for Flask 2 installation

  Fix:
  * After a logout the jwt token can not be reused

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 23 Feb 2022 08:51:51 +0100

linotp (3.2.1~0dev-1) buster-dev; urgency=low

  Fixes:
  * Audit key verification errors solved by using newer version of pycryptodomex.
  * Remove weak file permissions in config dir.
  * Solved migration of QR-tokens which broke backup-restore from SVA-2.12.5 to SVA-3.0
  * Database re-encoding during database migration now also migrates
    managed users that were previously not correctly migrated.
  * Debian postinst trying to add admin users via htdigest. This is no longer supported
    and therefore removed. Use the linotp CLI manually instead.
  * Ensure that inactive policies are not evaluated. Previously, inactive policies were
    being evaluated in certain situations, leading to wrongly attributed permissions to
    logged-in administrators.

 -- LinOTP Packaging <packaging@linotp.de>  Fri, 15 Jul 2022 12:00:00 +0100

linotp (3.2-1) buster-dev; urgency=low

  Breaking Changes:
  * The helpdesk controller has been removed.
  * Apache-based admin authentication is no longer supported.
  * Audit Trail export is now ordered descending (latest logs first) when
    done from the Manage-UI.
  * Admin authentication: 'Cross site scripting request forgery (CSRF)' is no longer
    handled via the session request parameter. Instead, a CSRF-protection token, which is
    available via cookies, must be sent in the request header. Non-modifying requests