@@ -10,6 +10,7 @@ from linotp.lib.context import request_context
 from linotp.lib.policy import PolicyException, checkPolicyPre
 from linotp.lib.reply import sendError, sendResult
 from linotp.lib.tokeniterator import TokenIterator
+from linotp.lib.type_utils import DEFAULT_TIMEFORMAT
 from linotp.lib.user import getUserFromParam, getUserFromRequest
 from linotp.lib.util import check_session, get_client
 from linotp.model import db
@@ -370,7 +371,11 @@ class TokenAdapter:
         self.description = linotp_token["LinOtp.TokenDesc"]
         self.serial = linotp_token["LinOtp.TokenSerialnumber"]
         self.type = linotp_token["LinOtp.TokenType"].lower()
-        self.creation_date = linotp_token["LinOtp.CreationDate"]
+
+        self.creation_date = _parse_date_string(
+            linotp_token["LinOtp.CreationDate"]
+        )
+
         self.is_active = linotp_token["LinOtp.Isactive"]
         self.realms = linotp_token["LinOtp.RealmNames"]
 
@@ -400,14 +405,18 @@ class TokenAdapter:
         self.max_successful_login_attempts = self._token_info.get(
             "count_auth_success_max", None
         )
-        self.last_successful_login_attempt = linotp_token[
-            "LinOtp.LastAuthSuccess"
-        ]
+        self.last_successful_login_attempt = _parse_date_string(
+            linotp_token["LinOtp.LastAuthSuccess"]
+        )
         self.failed_login_attempts = linotp_token["LinOtp.FailCount"]
         self.max_failed_login_attempts = linotp_token["LinOtp.MaxFail"]
-        self.last_authentication_match = linotp_token["LinOtp.LastAuthMatch"]
+        self.last_authentication_match = _parse_date_string(
+            linotp_token["LinOtp.LastAuthMatch"]
+        )
 
         # validity period
+        # the following two dates are not stored in DEFAULT_TIMEFORMAT and must
+        # be parsed differently than the remaining date strings.
         for field in ["validity_period_end", "validity_period_start"]:
             if field in self._token_info:
                 date = datetime.strptime(
@@ -432,7 +441,7 @@ class TokenAdapter:
             "description": self.description,
             "serial": self.serial,
             "type": self.type,
-            "creationDate": self.creation_date,
+            "creationDate": _stringify_date(self.creation_date),
             "isActive": self.is_active,
             "realms": self.realms,
             "tokenConfiguration": {
@@ -459,17 +468,44 @@ class TokenAdapter:
                 "maxLoginAttempts": self.max_login_attempts,
                 "successfulLoginAttempts": self.successful_login_attempts,
                 "maxSuccessfulLoginAttempts": self.max_successful_login_attempts,
-                "lastSuccessfulLoginAttempt": self.last_successful_login_attempt,
+                "lastSuccessfulLoginAttempt": _stringify_date(
+                    self.last_successful_login_attempt
+                ),
                 "failedLoginAttempts": self.failed_login_attempts,
                 "maxFailedLoginAttempts": self.max_failed_login_attempts,
-                "lastAuthenticationMatch": self.last_authentication_match,
+                "lastAuthenticationMatch": _stringify_date(
+                    self.last_authentication_match
+                ),
             },
             "validityPeriod": {
-                "validityStart": self.validity_start.isoformat()
-                if self.validity_start
-                else None,
-                "validityEnd": self.validity_end.isoformat()
-                if self.validity_end
-                else None,
+                "validityStart": _stringify_date(self.validity_start),
+                "validityEnd": _stringify_date(self.validity_end),
             },
         }
+
+
+### Utils ###
+
+
+def _parse_date_string(date_string):
+    """
+    Takes the datetime strings generated by get_vars() in linotp/model/token.py
+    and parses them according to the same format used there, so that we can
+    obtain a datetime object, which is then returned in the UTC timezone.
+    If the passed string is empty, return None.
+    """
+    return (
+        datetime.strptime(date_string, DEFAULT_TIMEFORMAT).replace(
+            tzinfo=timezone.utc
+        )
+        if date_string
+        else None
+    )
+
+
+def _stringify_date(date):
+    """
+    Takes the datetime object and returns it in isoformat. If it is None, return
+    None instead.
+    """
+    return date.isoformat() if date else None
